--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="background">#B2DFDB</color>
     <color name="colorAccent">#263238</color>
+    <color name="text">#263238</color>
 </resources>
