--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/gameLayout"
         android:background="@color/colorPrimary"
         tools:context=".gamefragment.GameFragment">
 
@@ -29,18 +30,18 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            app:layout_constraintTop_toBottomOf="@+id/player1_layout"
             app:layout_constraintVertical_bias="0.0" />
 
 
         <LinearLayout
-            android:id="@+id/linearLayout"
+            android:id="@+id/player1_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:gravity="center"
             android:orientation="vertical"
-            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
+            app:layout_constraintEnd_toStartOf="@+id/player2_layout"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -56,7 +57,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/player_1"
-                    android:textColor="#FFFEFE"
+                    android:textColor="@color/text"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -65,6 +66,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_margin="10dp"
+                    android:contentDescription="@string/player_1"
                     android:visibility="@{gameVm.isPlayer2 ? View.GONE : View.VISIBLE }"
                     app:srcCompat="@drawable/red_card" />
 
@@ -77,8 +79,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@{@string/score(gameVm.player1Score)}"
-                android:textColor="#FFFEFE"
-                android:textSize="20sp"
+                android:textColor="@color/text"
+                android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/player1_txt"
@@ -87,14 +89,14 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/linearLayout2"
+            android:id="@+id/player2_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout"
+            app:layout_constraintStart_toEndOf="@+id/player1_layout"
             app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
@@ -108,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/player_2"
-                    android:textColor="#FFFEFE"
+                    android:textColor="@color/text"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -118,6 +120,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_margin="10dp"
+                    android:contentDescription="@string/player_2"
                     android:visibility="@{gameVm.isPlayer2 ? View.VISIBLE : View.GONE }"
                     app:srcCompat="@drawable/red_card" />
             </LinearLayout>
@@ -129,12 +132,54 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="@{@string/score(gameVm.player2Score)}"
-                android:textColor="#FFFEFE"
+                android:textColor="@color/text"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
 
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/winnerAnimation"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/winnerTxt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.29000002"
+            app:lottie_fileName="winner.json"
+            app:lottie_loop="true" />
+
+        <TextView
+            android:id="@+id/winnerTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textColor="@color/text"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/goBackBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/winnerAnimation"
+            app:layout_constraintVertical_bias="0.45" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/goBackBtn"
+            android:visibility="gone"
+            android:src="@drawable/ic_close_white_24dp"
+            app:layout_constraintTop_toBottomOf="@id/winnerTxt"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:layout_editor_absoluteX="176dp"
+            tools:layout_editor_absoluteY="533dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
